Added settings dialog

--- a/cipherts/cipher.csproj
+++ b/cipherts/cipher.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="composer.ts" />
     <TypeScriptCompile Include="game_logic.ts" />
+    <TypeScriptCompile Include="game_settings.ts" />
     <TypeScriptCompile Include="game_view.ts" />
     <TypeScriptCompile Include="main.ts">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -46,6 +47,7 @@
     <TypeScriptCompile Include="data\covert_data.ts" />
     <TypeScriptCompile Include="SubstitutionPicker.ts" />
     <TypeScriptCompile Include="tab_control.ts" />
+    <TypeScriptCompile Include="util\domutil.ts" />
     <TypeScriptCompile Include="util\keys.ts" />
     <TypeScriptCompile Include="util\param.ts" />
     <TypeScriptCompile Include="util\random.ts">
